# geo_tracker

./: .pre-commit-config.yaml  README.MD  main.py  mypy.ini  pyproject.toml
apps/geo_data/: model.py  reciver.py  repository.py  schema.py
core/: database.py  events.py  setting.py
migrations/: env.py
migrations/versions/: e9966800c622_add_tables_init.py
routes/geo/: route.py
schemas/: geo.py
